--- a/index.html
+++ b/index.html
@@ -84,6 +84,17 @@
         ></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@animxyz/core" />
 
+        <script>
+            const navigationTooltips = [
+                'DirtyCoins',
+                'Tiền thân',
+                'Nhà sáng lập',
+                'Hành trình',
+                'Đồng hành',
+                'Collaborations',
+                'Shop',
+            ];
+        </script>
         <script type="text/javascript" src="/public/js/index.js" async></script>
     </head>
     <body>
