remove unnecessary async attributes

--- a/index.html
+++ b/index.html
@@ -78,10 +78,7 @@
                 );
             };
         </script>
-        <script
-            async
-            src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.1.2/fullpage.min.js"
-        ></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.1.2/fullpage.min.js"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@animxyz/core" />
 
         <script>
@@ -95,7 +92,7 @@
                 'Shop',
             ];
         </script>
-        <script type="text/javascript" src="/public/js/index.js" async></script>
+        <script type="text/javascript" src="/public/js/index.js"></script>
     </head>
     <body>
         <div class="loading-screen">
