--- a/en.html
+++ b/en.html
@@ -78,10 +78,7 @@
                 );
             };
         </script>
-        <script
-            async
-            src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.1.2/fullpage.min.js"
-        ></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.1.2/fullpage.min.js"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@animxyz/core" />
 
         <script>
@@ -95,7 +92,7 @@
                 'Shop',
             ];
         </script>
-        <script type="text/javascript" src="/public/js/index.js" async></script>
+        <script type="text/javascript" src="/public/js/index.js"></script>
     </head>
     <body>
         <div class="loading-screen">
@@ -224,7 +221,7 @@
 
         <nav class="nav">
             <div class="nav-content">
-                <a href="/">
+                <a href="/en.html">
                     <div class="nav-logo">
                         <img src="/public/img/logo_without_text.png" alt="Logo without text" />
                     </div>
