update responsive mobile

--- a/en.html
+++ b/en.html
@@ -458,7 +458,7 @@
                                         target="_blank"
                                     >
                                         <div
-                                            class="slide-video-border item-group"
+                                            class="slide-video-border item-group slide-video-hide"
                                             xyz="fade-100% left-5 duration-7 delay-9"
                                         >
                                             <video preload="auto" class="xyz-out">
@@ -466,8 +466,19 @@
                                                     src="/public/vid/dirtycoins_x_lalune.mp4"
                                                     type="video/mp4"
                                                 />
-                                                Something went wrong.
+                                                Đã có lỗi xảy ra.
                                             </video>
+                                        </div>
+                                        <div
+                                            class="slide-video-border item-group slide-img-hide"
+                                            xyz="fade-100% left-5 duration-7 delay-9"
+                                        >
+                                            <img
+                                                src="/public/img/dirtycoins_x_lalune.jpg"
+                                                alt="DirtyCoins x LaLune"
+                                                class="xyz-out"
+                                                loading="lazy"
+                                            />
                                         </div>
                                     </a>
                                     <div
@@ -491,7 +502,7 @@
                                         target="_blank"
                                     >
                                         <div
-                                            class="slide-video-border item-group"
+                                            class="slide-video-border item-group slide-video-hide"
                                             xyz="fade-100% right-5 duration-7 delay-9"
                                         >
                                             <video preload="auto" class="xyz-out">
@@ -499,8 +510,19 @@
                                                     src="/public/vid/dirtycoins_x_double2t.mp4"
                                                     type="video/mp4"
                                                 />
-                                                Something went wrong.
+                                                Đã có lỗi xảy ra.
                                             </video>
+                                        </div>
+                                        <div
+                                            class="slide-video-border item-group slide-img-hide"
+                                            xyz="fade-100% left-5 duration-7 delay-9"
+                                        >
+                                            <img
+                                                src="/public/img/dirtycoins_x_double2t.jpg"
+                                                alt="DirtyCoins x DOBULE2T"
+                                                class="xyz-out"
+                                                loading="lazy"
+                                            />
                                         </div>
                                     </a>
                                     <div
@@ -552,7 +574,7 @@
                                         target="_blank"
                                     >
                                         <div
-                                            class="slide-video-border item-group"
+                                            class="slide-video-border item-group slide-video-hide"
                                             xyz="fade-100% left-5 duration-7 delay-9"
                                         >
                                             <video preload="auto" class="xyz-out">
@@ -560,8 +582,19 @@
                                                     src="/public/vid/dirtycoins_x_bray.mp4"
                                                     type="video/mp4"
                                                 />
-                                                Something went wrong.
+                                                Đã có lỗi xảy ra.
                                             </video>
+                                        </div>
+                                        <div
+                                            class="slide-video-border item-group slide-img-hide"
+                                            xyz="fade-100% left-5 duration-7 delay-9"
+                                        >
+                                            <img
+                                                src="/public/img/dirtycoins_x_bray.jpg"
+                                                alt="DirtyCoins x BRay"
+                                                class="xyz-out"
+                                                loading="lazy"
+                                            />
                                         </div>
                                     </a>
                                     <div
