--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
                                         target="_blank"
                                     >
                                         <div
-                                            class="slide-video-border item-group"
+                                            class="slide-video-border item-group slide-video-hide"
                                             xyz="fade-100% left-5 duration-7 delay-9"
                                         >
                                             <video preload="auto" class="xyz-out">
@@ -467,6 +467,17 @@
                                                 />
                                                 Đã có lỗi xảy ra.
                                             </video>
+                                        </div>
+                                        <div
+                                            class="slide-video-border item-group slide-img-hide"
+                                            xyz="fade-100% left-5 duration-7 delay-9"
+                                        >
+                                            <img
+                                                src="/public/img/dirtycoins_x_lalune.jpg"
+                                                alt="DirtyCoins x LaLune"
+                                                class="xyz-out"
+                                                loading="lazy"
+                                            />
                                         </div>
                                     </a>
                                     <div
@@ -490,7 +501,7 @@
                                         target="_blank"
                                     >
                                         <div
-                                            class="slide-video-border item-group"
+                                            class="slide-video-border item-group slide-video-hide"
                                             xyz="fade-100% right-5 duration-7 delay-9"
                                         >
                                             <video preload="auto" class="xyz-out">
@@ -500,6 +511,17 @@
                                                 />
                                                 Đã có lỗi xảy ra.
                                             </video>
+                                        </div>
+                                        <div
+                                            class="slide-video-border item-group slide-img-hide"
+                                            xyz="fade-100% left-5 duration-7 delay-9"
+                                        >
+                                            <img
+                                                src="/public/img/dirtycoins_x_double2t.jpg"
+                                                alt="DirtyCoins x DOBULE2T"
+                                                class="xyz-out"
+                                                loading="lazy"
+                                            />
                                         </div>
                                     </a>
                                     <div
@@ -551,7 +573,7 @@
                                         target="_blank"
                                     >
                                         <div
-                                            class="slide-video-border item-group"
+                                            class="slide-video-border item-group slide-video-hide"
                                             xyz="fade-100% left-5 duration-7 delay-9"
                                         >
                                             <video preload="auto" class="xyz-out">
@@ -561,6 +583,17 @@
                                                 />
                                                 Đã có lỗi xảy ra.
                                             </video>
+                                        </div>
+                                        <div
+                                            class="slide-video-border item-group slide-img-hide"
+                                            xyz="fade-100% left-5 duration-7 delay-9"
+                                        >
+                                            <img
+                                                src="/public/img/dirtycoins_x_bray.jpg"
+                                                alt="DirtyCoins x BRay"
+                                                class="xyz-out"
+                                                loading="lazy"
+                                            />
                                         </div>
                                     </a>
                                     <div
